Lexspec/src/helloParser.java
// Generated from hello.g4 by ANTLR 4.10.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class helloParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BEGINN=1, BEGINN0=2, SETNQ=3, SET=4, DELAY=5, CAR=6, CDR=7, COMBINATIONS=8, 
		LIST=9, REVERSE=10, APPEND=11, LAMBDA=12, LAMBDASYM=13, LOCAL=14, LETREC=15, 
		SHARED=16, LET=17, LETSTAR=18, RECUR=19, COND=20, ELSE=21, IF=22, AND=23, 
		OR=24, TSCHECKEXP=25, TSCHECKRAND=26, TSCHECKWITHIN=27, TSCHECKMEMBEROF=28, 
		TSCHECKSATSIS=29, TSCHECKERROR=30, REQUIRE=31, DISPLAY=32, DEFINE=33, 
		NEWLINE=34, EMPTY=35, DEFINESTRUCT=36, QSMARK=37, QUOTESX=38, QUOTEQUOTED=39, 
		LEFTB=40, RIGHTB=41, LEFTSQB=42, RIGHTSQB=43, QUOTEQUASIQUOTED=44, CHARACTERQUOTED=45, 
		ARTHOPERATORS=46, BOOLEAN=47, RELOPERATORS=48, SYMBOL=49, INT=50, DECIMAL=51, 
		NAME=52, COMMA=53, COMMAAT=54, STRING=55, CHARACTER=56, LANG=57, COMMENT=58, 
		WS=59;
	public static final int
		RULE_start = 0, RULE_program = 1, RULE_defOrExpr = 2, RULE_nameplus = 3, 
		RULE_namestar = 4, RULE_definitionstar = 5, RULE_definition = 6, RULE_exprplus = 7, 
		RULE_lner = 8, RULE_leerbplus = 9, RULE_leersqbplus = 10, RULE_leersqbstar = 11, 
		RULE_expr = 12, RULE_quotedstar = 13, RULE_quoted = 14, RULE_quasiQuotedstar = 15, 
		RULE_quasiQuoted = 16, RULE_exprquestionmark = 17, RULE_testCase = 18, 
		RULE_stringplus = 19, RULE_lsprquestionmark = 20, RULE_libraryRequire = 21, 
		RULE_pkg = 22, RULE_name = 23, RULE_symbol = 24, RULE_number = 25, RULE_bool = 26, 
		RULE_string = 27, RULE_character = 28, RULE_reloperators = 29, RULE_arthoperators = 30;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "program", "defOrExpr", "nameplus", "namestar", "definitionstar", 
			"definition", "exprplus", "lner", "leerbplus", "leersqbplus", "leersqbstar", 
			"expr", "quotedstar", "quoted", "quasiQuotedstar", "quasiQuoted", "exprquestionmark", 
			"testCase", "stringplus", "lsprquestionmark", "libraryRequire", "pkg", 
			"name", "symbol", "number", "bool", "string", "character", "reloperators", 
			"arthoperators"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'begin'", "'begin0'", "'set!'", "'set'", "'delay'", "'car'", "'cdr'", 
			"'combinations'", "'list'", "'reverse'", "'append'", "'lambda'", "'\\u03BB'", 
			"'local'", "'letrec'", "'shared'", "'let'", "'let*'", "'recur'", "'cond'", 
			"'else '", "'if'", "'and'", "'or'", "'check-expect'", "'check-random'", 
			"'check-within'", "'check-member-of'", "'check-satisfied'", "'check-error'", 
			"'require'", "'display'", "'define'", "'newline'", "'empty'", "'define-struct'", 
			"'?'", "'\\u2019()'", "'\\u2019'", "'('", "')'", "'['", "']'", "'\\u2018'", 
			null, null, null, null, null, null, null, null, "','", "',@'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BEGINN", "BEGINN0", "SETNQ", "SET", "DELAY", "CAR", "CDR", "COMBINATIONS", 
			"LIST", "REVERSE", "APPEND", "LAMBDA", "LAMBDASYM", "LOCAL", "LETREC", 
			"SHARED", "LET", "LETSTAR", "RECUR", "COND", "ELSE", "IF", "AND", "OR", 
			"TSCHECKEXP", "TSCHECKRAND", "TSCHECKWITHIN", "TSCHECKMEMBEROF", "TSCHECKSATSIS", 
			"TSCHECKERROR", "REQUIRE", "DISPLAY", "DEFINE", "NEWLINE", "EMPTY", "DEFINESTRUCT", 
			"QSMARK", "QUOTESX", "QUOTEQUOTED", "LEFTB", "RIGHTB", "LEFTSQB", "RIGHTSQB", 
			"QUOTEQUASIQUOTED", "CHARACTERQUOTED", "ARTHOPERATORS", "BOOLEAN", "RELOPERATORS", 
			"SYMBOL", "INT", "DECIMAL", "NAME", "COMMA", "COMMAAT", "STRING", "CHARACTER", 
			"LANG", "COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "hello.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public helloParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof helloListener ) ((helloListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof helloListener ) ((helloListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			program();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramContext extends ParserRuleContext {
		public DefOrExprContext defOrExpr() {
			return getRuleContext(DefOrExprContext.class,0);
		}
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public TerminalNode EOF() { return getToken(helloParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof helloListener ) ((helloListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof helloListener ) ((helloListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_program);
		try {
			setState(69);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(64);
				defOrExpr();
				setState(65);
				program();
				setState(66);
				match(EOF);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(68);
				defOrExpr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefOrExprContext extends ParserRuleContext {
		public DefinitionContext definition() {
			return getRuleContext(DefinitionContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TestCaseContext testCase() {
			return getRuleContext(TestCaseContext.class,0);
		}
		public LibraryRequireContext libraryRequire() {
			return getRuleContext(LibraryRequireContext.class,0);
		}
		public DefOrExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defOrExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof helloListener ) ((helloListener)listener).enterDefOrExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof helloListener ) ((helloListener)listener).exitDefOrExpr(this);
		}
	}

	public final DefOrExprContext defOrExpr() throws RecognitionException {
		DefOrExprContext _localctx = new DefOrExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_defOrExpr);
		try {
			setState(75);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				definition();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				expr();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(73);
				testCase();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(74);
				libraryRequire();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NameplusContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public NameplusContext nameplus() {
			return getRuleContext(NameplusContext.class,0);
		}
		public NameplusContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nameplus; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof helloListener ) ((helloListener)listener).enterNameplus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof helloListener ) ((helloListener)listener).exitNameplus(this);
		}
	}

	public final NameplusContext nameplus() throws RecognitionException {
		NameplusContext _localctx = new NameplusContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_nameplus);
		try {
			setState(81);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				name();
				setState(78);
				nameplus();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(80);
				name();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NamestarContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public NamestarContext namestar() {
			return getRuleContext(NamestarContext.class,0);
		}
		public NamestarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namestar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof helloListener ) ((helloListener)listener).enterNamestar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof helloListener ) ((helloListener)listener).exitNamestar(this);
		}
	}

	public final NamestarContext namestar() throws RecognitionException {
		NamestarContext _localctx = new NamestarContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_namestar);
		try {
			setState(87);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(83);
				name();
				setState(84);
				namestar();
				}
				break;
			case RIGHTB:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionstarContext extends ParserRuleContext {
		public DefinitionContext definition() {
			return getRuleContext(DefinitionContext.class,0);
		}
		public DefinitionstarContext definitionstar() {
			return getRuleContext(DefinitionstarContext.class,0);
		}
		public DefinitionstarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definitionstar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof helloListener ) ((helloListener)listener).enterDefinitionstar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof helloListener ) ((helloListener)listener).exitDefinitionstar(this);
		}
	}

	public final DefinitionstarContext definitionstar() throws RecognitionException {
		DefinitionstarContext _localctx = new DefinitionstarContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_definitionstar);
		try {
			setState(93);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LEFTB:
				enterOuterAlt(_localctx, 1);
				{
				setState(89);
				definition();
				setState(90);
				definitionstar();
				}
				break;
			case RIGHTSQB:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionContext extends ParserRuleContext {
		public List<TerminalNode> LEFTB() { return getTokens(helloParser.LEFTB); }
		public TerminalNode LEFTB(int i) {
			return getToken(helloParser.LEFTB, i);
		}
		public TerminalNode DEFINE() { return getToken(helloParser.DEFINE, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<TerminalNode> RIGHTB() { return getTokens(helloParser.RIGHTB); }
		public TerminalNode RIGHTB(int i) {
			return getToken(helloParser.RIGHTB, i);
		}
		public NameplusContext nameplus() {
			return getRuleContext(NameplusContext.class,0);
		}
		public TerminalNode DEFINESTRUCT() { return getToken(helloParser.DEFINESTRUCT, 0); }
		public NamestarContext namestar() {
			return getRuleContext(NamestarContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof helloListener ) ((helloListener)listener).enterDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof helloListener ) ((helloListener)listener).exitDefinition(this);
		}
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_definition);
		try {
			setState(118);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				match(LEFTB);
				setState(96);
				match(DEFINE);
				setState(97);
				name();
				setState(98);
				expr();
				setState(99);
				match(RIGHTB);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(101);
				match(LEFTB);
				setState(102);
				match(DEFINE);
				setState(103);
				match(LEFTB);
				setState(104);
				name();
				setState(105);
				nameplus();
				setState(106);
				match(RIGHTB);
				setState(107);
				expr();
				setState(108);
				match(RIGHTB);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(110);
				match(LEFTB);
				setState(111);
				match(DEFINESTRUCT);
				setState(112);
				name();
				setState(113);
				match(LEFTB);
				setState(114);
				namestar();
				setState(115);
				match(RIGHTB);
				setState(116);
				match(RIGHTB);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprplusContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public ExprplusContext exprplus() {
			return getRuleContext(ExprplusContext.class,0);
		}
		public ExprplusContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprplus; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof helloListener ) ((helloListener)listener).enterExprplus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof helloListener ) ((helloListener)listener).exitExprplus(this);
		}
	}

	public final ExprplusContext exprplus() throws RecognitionException {
		ExprplusContext _localctx = new ExprplusContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_exprplus);
		try {
			setState(124);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				expr();
				setState(121);
				exprplus();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(123);
				expr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LnerContext extends ParserRuleContext {
		public TerminalNode LEFTSQB() { return getToken(helloParser.LEFTSQB, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RIGHTSQB() { return getToken(helloParser.RIGHTSQB, 0); }
		public LnerContext lner() {
			return getRuleContext(LnerContext.class,0);
		}
		public LnerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lner; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof helloListener ) ((helloListener)listener).enterLner(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof helloListener ) ((helloListener)listener).exitLner(this);
		}
	}

	public final LnerContext lner() throws RecognitionException {
		LnerContext _localctx = new LnerContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_lner);
		try {
			setState(133);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LEFTSQB:
				enterOuterAlt(_localctx, 1);
				{
				setState(126);
				match(LEFTSQB);
				setState(127);
				name();
				setState(128);
				expr();
				setState(129);
				match(RIGHTSQB);
				setState(130);
				lner();
				}
				break;
			case RIGHTB:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LeerbplusContext extends ParserRuleContext {
		public TerminalNode LEFTB() { return getToken(helloParser.LEFTB, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode RIGHTB() { return getToken(helloParser.RIGHTB, 0); }
		public LeerbplusContext leerbplus() {
			return getRuleContext(LeerbplusContext.class,0);
		}
		public LeerbplusContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_leerbplus; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof helloListener ) ((helloListener)listener).enterLeerbplus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof helloListener ) ((helloListener)listener).exitLeerbplus(this);
		}
	}

	public final LeerbplusContext leerbplus() throws RecognitionException {
		LeerbplusContext _localctx = new LeerbplusContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_leerbplus);
		try {
			setState(146);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(135);
				match(LEFTB);
				setState(136);
				expr();
				setState(137);
				expr();
				setState(138);
				match(RIGHTB);
				setState(139);
				leerbplus();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(141);
				match(LEFTB);
				setState(142);
				expr();
				setState(143);
				expr();
				setState(144);
				match(RIGHTB);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LeersqbplusContext extends ParserRuleContext {
		public TerminalNode LEFTSQB() { return getToken(helloParser.LEFTSQB, 0); }
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode RIGHTSQB() { return getToken(helloParser.RIGHTSQB, 0); }
		public LeersqbplusContext leersqbplus() {
			return getRuleContext(LeersqbplusContext.class,0);
		}
		public LeersqbplusContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_leersqbplus; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof helloListener ) ((helloListener)listener).enterLeersqbplus(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof helloListener ) ((helloListener)listener).exitLeersqbplus(this);
		}
	}

	public final LeersqbplusContext leersqbplus() throws RecognitionException {
		LeersqbplusContext _localctx = new LeersqbplusContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_leersqbplus);
		try {
			setState(159);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(148);
				match(LEFTSQB);
				setState(149);
				expr();
				setState(150);
				expr();
				setState(151);
				match(RIGHTSQB);
				setState(152);
				leersqbplus();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(154);
				match(LEFTSQB);
				setState(155);
				expr();
				setState(156);
				expr();
				setState(157);
				match(RIGHTSQB);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
